// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not parse other values 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "null",
    "path": [],
    "received": "object",
  },
]
`;

exports[`should not parse other values 2`] = `
[
  {
    "code": "invalid_type",
    "expected": "null",
    "path": [],
    "received": "undefined",
  },
]
`;

exports[`should not parse other values 3`] = `
[
  {
    "code": "invalid_type",
    "expected": "null",
    "path": [],
    "received": "map",
  },
]
`;

exports[`should not parse other values 4`] = `
[
  {
    "code": "invalid_type",
    "expected": "null",
    "path": [],
    "received": "set",
  },
]
`;

exports[`should not parse other values 5`] = `
[
  {
    "code": "invalid_type",
    "expected": "null",
    "path": [],
    "received": "promise",
  },
]
`;

exports[`should not parse other values 6`] = `
[
  {
    "code": "invalid_type",
    "expected": "null",
    "path": [],
    "received": "error",
  },
]
`;

exports[`should not parse other values 7`] = `
[
  {
    "code": "invalid_type",
    "expected": "null",
    "path": [],
    "received": "date",
  },
]
`;

exports[`should not parse other values 8`] = `
[
  {
    "code": "invalid_type",
    "expected": "null",
    "path": [],
    "received": "regexp",
  },
]
`;

exports[`should not parse other values 9`] = `
[
  {
    "code": "invalid_type",
    "expected": "null",
    "path": [],
    "received": "object",
  },
]
`;
